<resources>
    <string name="app_name">WE</string>
    <string name="page_1_email_hint">Email</string>
    <string name="page_1_login_btn_hint">LOGIN</string>
    <string name="page_1_app_title">WE Women</string>
    <string name="page_1_password_hint">Password</string>
    <string name="page_1_register">Register</string>
    <string name="page_1_forgot_password">Forgot Password?</string>
    <string name="page_2_heading">Sign Up</string>
    <string name="page_2_already_registered">Already Registered?</string>
    <string name="page_2_confirm_password">Confirm Your Password</string>
    <string name="page_2_password">Enter Password</string>
    <string name="page_2_email">Enter Email</string>
    <string name="page_2_login">Click here to LOGIN</string>
    <string name="page_3_heading">Forgot Password</string>
    <string name="page_3_forgot_password">FORGOT PASSWORD</string>
    <string name="page_3_email_hint">Registered Email</string>
    <string name="page_3_reset">Reset Password</string>
    <string name="page_3_login">Click here to LOGIN</string>
    <string name="page_3_signup">Click here to SIGN UP</string>
    <string name="page_4_heading">Enter Details</string>
    <string name="page_6_heading">User Profile</string>
    <string name="page_7_heading">Language</string>
    <string name="language_page">Select language</string>
    <string-array name="language">

        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string name="image_message">Image</string>
    <string name="location_message">Location</string>
    <string name="unknown_message">Unknown Message</string>
    <string name="no_messages">No Messages</string>
    <string name="audio_message">Recording</string>
    <string name="video_message">Video</string>
    <string name="sticker_message">Sticker</string>
    <string name="file_message">File</string>
    <string name="thread">Thread</string>
    <string name="no_name">No Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="loading">Loading&#8230;</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="add_contacts">Add to Contacts</string>
    <string name="delete_contact">Remove Contact</string>
    <string name="add_users">Add Users</string>
    <string name="start_chat">Start Chat</string>
    <string name="contacts_upper_case">CONTACTS</string>
    <string name="select_all">Select All</string>
    <string name="send_location">Send this location</string>
    <string name="search_upper_case">SEARCH</string>
    <string name="send">Send</string>
    <string name="pick_friends">Pick Friends</string>
    <string name="tap_here_for_contact_info">Tap here for contact info</string>
    <string name="search_with_name">Search with name</string>
    <string name="add_conversation">Add Conversation</string>
    <string name="public_thread__is_created" formatted="false">Public thread %s is created</string>
    <string name="creating_thread">Creating Thread</string>
    <string name="send_mail">Send Mail</string>
    <string name="there_are_no_email_clients_installed">Send Mail</string>
    <string name="thread_users_have_no_valid_avatar_urls">Thread users have no valid avatar URLs</string>
    <string name="could_not_save_composite_thread_image_to_file">Could not save composite thread image to file</string>
    <string name="thread_image_could_not_be_created">Thread image could not be created</string>
    <string name="__typing" formatted="false">%s typing..</string>
    <string name="message_doesnt_have_a_thread">Message doesn\'t have a thread</string>
    <string name="login_method_doesnt_exist">Login method doesn\'t exist</string>
    <string name="seconds_remaining__">Seconds remaining %d</string>
    <string name="audio_length_limit_reached">Audio length limit reached</string>
    <string name="send_or_discard_recording">Send or discard recording</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="recording_too_short">Recording too short</string>
    <string name="thread_details_activity_title">Thread Details</string>
    <string name="thread_details_activity_change_name_dialog_title">Set thread name</string>
    <string name="message_adapter_no_google_maps">This device does not have google maps</string>
    <string name="message_adapter_load_image_fail">Can\'t show image</string>
    <string name="chat_sdk__version_label">Version:</string>
    <string name="login_activity_no_mail_toast">Please enter your email</string>
    <string name="login_activity_no_password_toast">Please enter password</string>
    <string name="login_activity_facebook_connection_fail_toast">Failed to connect to Facebook</string>
    <string name="login_activity_failed_to_login_toast">Failed to connect</string>
    <string name="login_activity_failed_to_register_toast">Failed to register</string>
    <string name="create_thread_with_users_fail_toast">Failed to start chat</string>
    <string name="delete_thread_fail_toast">Unable to delete thread</string>
    <string name="delete_thread_success_toast">Thread is deleted</string>
    <string name="chat_activity_no_more_messages_to_load_toast">There is no new messages to load&#8230;</string>
    <string name="chat_activity_add_item_text">Add contact to chat</string>
    <string name="chat_activity_show_users_item_text">Show thread users</string>
    <string name="chat_activity_show_thread_details">Thread Details</string>
    <string name="thread_users">Thread users:</string>
    <string name="abstract_contact_fragment_user_added_to_thread_toast_success">User added to thread, Name:&#160;</string>
    <string name="abstract_contact_fragment_user_added_to_thread_toast_fail">Can\'t add user to thread.</string>
    <string name="abstract_contact_fragment_share_with_contact_toast_fail_unknown_type">Problem sharing contact, Unknown share type.</string>
    <string name="share_activity_error_getting_share_data">Error getting share data</string>
    <string name="pick_friends_activity_no_users_selected_toast">Please select at least one user</string>
    <string name="pick_friends_activity_prog_dialog_add_to_convo_message">Adding users to thread&#8230;</string>
    <string name="pick_friends_activity_prog_dialog_open_new_convo_message">Creating thread&#8230;</string>
    <string name="pick_friends_activity_prog_group_name_dialog">Group Name</string>
    <string name="exit_helper_double_tap_toast">click back again to exit</string>
    <string name="alert_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="permission_record_audio_title">Microphone Access</string>
    <string name="permission_record_audio_message">Grant permission to send audio messages</string>
    <string name="permission_write_external_storage_title">Gallery Access</string>
    <string name="permission_write_external_storage_message">Grant permission to allow images to be saved to your phone</string>
    <string name="permission_manage_documents_storage_title">Manage Documents</string>
    <string name="permission_manage_documents_message">Grant permission to allow your documents to be accessed</string>
    <string name="permission_read_external_storage_title">Gallery Access</string>
    <string name="permission_read_external_storage_message">Grant permission to allow images to be sent from your gallery</string>
    <string name="permission_camera_title">Camera Access</string>
    <string name="permission_camera_message">Grant permission to allow image messages to be sent</string>
    <string name="permission_video_output_title">Camera Access</string>
    <string name="permission_video_output_message">Grant permission to allow video messages to be sent</string>
    <string name="permission_read_contacts_title">Contacts Access</string>
    <string name="permission_read_contacts_message">Grant permission to allow contact book search</string>
    <string name="permission_location_title">Location Access</string>
    <string name="permission_location_message">Grant permission to allow discovery of nearby users</string>
    <string name="search_activity_no_text_input_toast">Please enter some text for the search</string>
    <string name="search_activity_no_user_found_toast">No match found</string>
    <string name="search_activity_no_contact_selected_toast">No contacts were selected</string>
    <string name="search_activity_user_added_as_contact_after_count_toast"> Users were added as contacts</string>
    <string name="search_activity_prog_dialog_init_message">Fetching&#8230;</string>
    <string name="search_activity_prog_dialog_before_count_message">Fetching&#8230; Found:&#160;</string>
    <string name="search_activity_searching_message">Searching</string>
    <string name="thread_fragment_add_item_text">Create chat</string>
    <string name="add_public_chat_dialog_title">Add Chat Room</string>
    <string name="add_public_chat_dialog_progress_message">Creating thread&#8230;</string>
    <string name="add_public_chat_dialog_toast_success_before_thread_name">Public thread&#160;</string>
    <string name="add_public_chat_dialog_toast_success_after_thread_name">&#160;is created.</string>
    <string name="add_public_chat_dialog_toast_error_before_thread_name">Failed to create public thread&#160;</string>
    <string name="alert_save_contact">Saving</string>
    <string name="contact_book">Contact Book</string>
    <string name="delete_message">Delete Message</string>
    <string name="alert_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="alert_delete_thread">Are you sure you want to delete this thread?</string>
    <string name="delete">Delete</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="login_activity_auth_failed">Auth Failed</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="registering">Registering&#8230;</string>
    <string name="acces_message_option_button">Message option button</string>
    <string name="chat_sdk__action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact_developer">Contact Developer</string>
    <string name="action_add_chat">Add Chat</string>
    <string name="actions">Actions</string>
    <string name="done_show_again">Done show again</string>
    <string name="double_back_press_exit">Use double back button pressed to exit</string>
    <string name="subscription">Presence Subscription</string>
    <string name="not_message_title">Message</string>
    <string name="not_message_ticker">You have a new message</string>
    <string name="not_follower_title">New Follower</string>
    <string name="not_follower_ticker">You got a new follower</string>
    <string name="not_follower_content">is following you!</string>
    <string name="new_message_from__" formatted="false">New message from %s</string>
    <string name="message_already_exists">Message already exists</string>
    <string name="unable_to_fetch_image">Unable to fetch image&#8230;</string>
    <string name="unable_to_save_file">Unable to save file&#8230;</string>
    <string name="unable_to_send_location_message">Unable to send location message&#8230;</string>
    <string name="reset_password">Reset Password</string>
</resources>