<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_sdk_root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher_big1" />

            <EditText
                android:id="@+id/chat_sdk_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/chat_sdk_et_password" />

            <EditText
                android:id="@+id/chat_sdk_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <!--<Spinner-->
                <!--android:id="@+id/language"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginRight="8dp"-->
                <!--android:entries="@array/language"-->
                <!--android:gravity="center"-->
                <!--android:textColor="#3D77B0"-->
                <!--android:textSize="14sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chat_sdk_btn_login"
                    style="@style/LoginButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/chat_sdk_login_button_selector"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@+id/chat_sdk_et_password" />

                <Button
                    android:id="@+id/chat_sdk_btn_register"
                    style="@style/LoginButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/chat_sdk_register_button_selector"
                    android:text="@string/register"
                    app:layout_constraintTop_toBottomOf="@+id/chat_sdk_et_password" />

            </LinearLayout>

            <Button
                android:id="@+id/chat_sdk_btn_anon_login"
                style="@style/LoginButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chat_sdk_login_anonymously_button_selector"
                android:text="@string/anonymous_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chat_sdk_btn_register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chat_sdk_btn_twitter_login"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_twitter"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <Button
                    android:id="@+id/chat_sdk_btn_facebook_login"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_facebook" />

                <Button
                    android:id="@+id/chat_sdk_btn_google_login"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_google" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/chat_sdk_btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>